<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity1">


    <ImageView
        android:id="@+id/imvAvatar2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/picture1" />

    <Button
        android:id="@+id/btnSetAvatar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/avatar"
        app:layout_constraintEnd_toEndOf="@+id/imvAvatar2"
        app:layout_constraintStart_toStartOf="@+id/imvAvatar2"
        app:layout_constraintTop_toBottomOf="@+id/imvAvatar2" />

    <EditText
        android:id="@+id/edtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/btnSetAvatar"
        app:layout_constraintStart_toStartOf="@+id/btnSetAvatar"
        app:layout_constraintTop_toBottomOf="@+id/btnSetAvatar" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pwd"
        app:layout_constraintEnd_toEndOf="@+id/edtLogin"
        app:layout_constraintStart_toStartOf="@+id/edtLogin"
        app:layout_constraintTop_toBottomOf="@+id/edtLogin" />

    <EditText
        android:id="@+id/edtFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        app:layout_constraintEnd_toEndOf="@+id/edtPassword"
        app:layout_constraintStart_toStartOf="@+id/edtPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />

    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        app:layout_constraintEnd_toEndOf="@+id/edtFirstName"
        app:layout_constraintStart_toStartOf="@+id/edtFirstName"
        app:layout_constraintTop_toBottomOf="@+id/edtFirstName" />

    <EditText
        android:id="@+id/edtFatherName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/father_name"
        app:layout_constraintEnd_toEndOf="@+id/edtLastName"
        app:layout_constraintStart_toStartOf="@+id/edtLastName"
        app:layout_constraintTop_toBottomOf="@+id/edtLastName" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="@+id/edtFatherName"
        app:layout_constraintStart_toStartOf="@+id/edtFatherName"
        app:layout_constraintTop_toBottomOf="@+id/edtFatherName" />
</androidx.constraintlayout.widget.ConstraintLayout>